Replace background image

--- a/www/templates/info.html
+++ b/www/templates/info.html
@@ -1,5 +1,5 @@
 <ion-view view-title="About OMTimer">
-    <ion-content>
+    <ion-content padding="true">
         <h1>OMTimer
             <small>1.0</small>
         </h1>
