--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,5 +1,5 @@
 .timer {
-    background: transparent url("../img/bg.jpg") center center no-repeat;
+    background: transparent url("../img/bg2.jpg") center center no-repeat;
     background-size: cover;
 }
 
