--- a/www/templates/countdown.html
+++ b/www/templates/countdown.html
@@ -7,23 +7,38 @@
             <h2 class="padding-vertical">{{ currentPhase.name }}</h2>
         </div>
         <div class="text-center padding-vertical">
-            <button class="button button-clear button-light pull-left" on-tap="previousPhase()">
-                <i class="ion-arrow-left-b"></i>
-            </button>
-            <button class="button button-clear button-light pull-right" on-tap="nextPhase()">
-                <i class="ion-arrow-right-b"></i>
-            </button>
-            <button ng-show="!running&&!resetted" on-tap="resetCountDown()"
-                    class="button button-light button-clear ion-refresh"></button>
-            <button ng-hide="running" on-tap="startCountDown()" class="button button-balanced">
-                <span ng-show="resetted">
-                <i class="icon-left ion-android-alarm-clock"></i> Start</span>
-                <i class="icon-left ion-play" ng-show="!running&&!resetted"></i>
-                <span ng-hide="resetted">
-                    {{ time | secondsToTime }}
-                </span>
-            </button>
-            <button on-tap="stopCountDown()" ng-show="running" class="button button-clear button-light ion-pause"></button>
+            <div class="row">
+                <div class="col">
+                    <!--Previous phase-->
+                    <button ng-hide="running" class="button button-clear button-light"
+                            on-tap="previousPhase()">
+                        <i class="ion-arrow-left-b"></i>
+                    </button>
+                </div>
+                <div class="col">
+                    <!--Reset timer-->
+                    <button ng-show="!running&&!resetted"
+                            on-tap="resetCountDown()"
+                            class="button button-light button-clear ion-refresh"></button>
+                    <!--Start timer-->
+                    <button class="button button-balanced icon-left ion-android-alarm-clock"
+                            on-tap="startCountDown()"
+                            ng-show="!running&&resetted">
+                        Start
+                    </button>
+                    <button ng-show="!running&&!resetted" on-tap="toggleCountDown()"
+                            class="button button-light button-clear ion-play"></button>
+                    <button on-tap="stopCountDown()" ng-show="running"
+                            class="ion-pause button button-light button-clear"></button>
+                </div>
+
+                <div class="col">
+                    <!--Next phase-->
+                    <button ng-hide="running" class="button button-clear button-light" on-tap="nextPhase()">
+                        <i class="ion-arrow-right-b"></i>
+                    </button>
+                </div>
+            </div>
         </div>
     </ion-content>
 </ion-view>
