Add phase saving

--- a/www/templates/phase.html
+++ b/www/templates/phase.html
@@ -24,7 +24,8 @@
             </div>
         </div>
         <div class="button-bar">
-            <button class="button button-stable button-outline" on-touch="back()">Cancel</button>
+            <button class="button button-stable button-outline"
+                    on-touch="back()">Cancel</button>
             <button on-touch="save()" class="button button-positive">
                 Save
             </button>
