Rewrite to use bidirectional bindung to localStorage

--- a/www/templates/timer-set.html
+++ b/www/templates/timer-set.html
@@ -1,44 +1,45 @@
 <ion-view view-title="{{timerSet.name}}">
-    <ion-content padding="true">
-        <div class="item item-divider">Timer settings</div>
-        <label class="item item-input item-stacked-label">
-            <span class="input-label">Timer Set Name</span>
-            <input type="text" placeholder="Mediation" ng-model="timerSet.name"/>
-        </label>
-        <ion-list show-reorder="reorderEnabled" can-swipe="swipeEnabled">
-            <div class="item item-divider">{{ timerSet.phases.length }} Phases</div>
-            <ion-item ng-repeat="phase in timerSet.phases track by $index">
-                <h2>{{ phase.name }}</h2>
-                <p>
-                    <span>{{ phase.time }} sec.</span>
-                    <span ng-if="phase.selfStoppingSound">
+  <ion-nav-buttons side="secondary">
+    <button class="button" on-touch="addPhase()">
+      <i class="ion-ios-plus-outline"></i>
+      Add Phase
+    </button>
+  </ion-nav-buttons>
+  <ion-content padding="true">
+    <div class="item item-divider">Timer settings</div>
+    <label class="item item-input item-stacked-label">
+      <span class="input-label">Timer Set Name</span>
+      <input type="text" placeholder="e.g. Mediation, Pomodoro, ..." ng-model="timerSet.name"/>
+    </label>
+    <ion-list show-reorder="reorderEnabled">
+      <div class="item item-divider">{{ timerSet.phases.length }} Phase<span
+        ng-show="timer.set.phases.length > 1">s</span></div>
+      <ion-item ng-repeat="phase in timerSet.phases track by $index">
+        <h2>{{ phase.name }}</h2>
+        <p>
+          <span>{{ phase.time }} sec.</span>
+          <!--
+          <span ng-if="phase.selfStoppingSound">
                       <i class="ion-ios-refresh-empty"></i>
                       One shot alarm
                     </span>
-                    <span ng-if="!phase.selfStoppingSound">
+          <span ng-if="!phase.selfStoppingSound">
                       <i class="ion-ios-loop-strong"></i>
                       Continuous alarm
                     </span>
-                </p>
-                <ion-option-button on-touch="deletePhase($index, phase)" class="button-assertive">Delete
-                </ion-option-button>
-                <ion-reorder-button class="ion-navicon"
-                                    on-reorder="moveItem(phase, $fromIndex, $toIndex)">
-                </ion-reorder-button>
-                <ion-option-button on-touch="editPhase($index)" class="button-positive">Edit</ion-option-button>
-            </ion-item>
-            <ion-item on-touch="addPhase()"><i class="ion-plus-circled"></i> Add phase</ion-item>
-        </ion-list>
-    </ion-content>
+        -->
+        </p>
+        <ion-option-button on-touch="deletePhase($index, phase)" class="button-assertive">Delete
+        </ion-option-button>
+        <ion-reorder-button class="ion-navicon"
+                            on-reorder="moveItem(phase, $fromIndex, $toIndex)">
+        </ion-reorder-button>
+        <ion-option-button on-touch="editPhase($index)" class="button-positive">Edit</ion-option-button>
+      </ion-item>
+    </ion-list>
+  </ion-content>
 
-    <div class="bar-footer bar">
-        <div class="button-bar">
-            <button class="button button-stable button-outline"
-                    on-touch="back()">Cancel
-            </button>
-            <button on-touch="save()" class="button button-positive">
-                Save
-            </button>
-        </div>
-    </div>
+  <div class="bar-footer bar bar-balanced">
+    <div class="title" on-touch="saveTimerSet()">Save timer set</div>
+  </div>
 </ion-view>
