--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,24 +1,25 @@
 .timer {
-    background: transparent url("../img/bg2.jpg") center center no-repeat;
-    background-size: cover;
+  background: transparent url("../img/bg2.jpg") center center no-repeat;
+  background-size: cover;
+  transition: all .3s linear;
 }
 
 .timer h1, .timer h2 {
-    color: white;
-    padding: 0;
-    /*text-shadow: 1px 1px 3px rgba(0, 0, 0, .2);*/
-    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
+  color: white;
+  padding: 0;
+  /*text-shadow: 1px 1px 3px rgba(0, 0, 0, .2);*/
+  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.5);
 }
 
 .timer .row button {
-    background-color: rgba(255, 255, 255, .2);
-    color: white;
+  background-color: rgba(255, 255, 255, .2);
+  color: white;
 }
 
 .pull-left {
-    float: left;
+  float: left;
 }
 
 .pull-right {
-    float: right;
+  float: right;
 }
