--- a/www/templates/phase.html
+++ b/www/templates/phase.html
@@ -1,34 +1,45 @@
 <ion-view view-title="Edit phase {{phase.name}}">
-    <ion-content padding="true">
-        <div class="list">
-            <label class="item item-input item-floating-label">
-                <span class="input-label">Phase name</span>
-                <input ng-model="phase.name" type="text" placeholder="Phase name">
-            </label>
-            <label class="item item-input item-floating-label">
-                <span class="input-label">Time in seconds</span>
-                <input ng-model="phase.time" type="number" placeholder="Time in seconds">
-            </label>
-            <label class="item item-input item-floating-label">
-                <span class="input-label">Alarm sound</span>
-                <input ng-model="phase.alarmSound" disabled type="text" placeholder="Alarm sound">
-            </label>
-            <div class="item item-toggle">
-                One shot alarm
-                <label class="toggle toggle-positive">
-                    <input ng-model="phase.selfStoppingSound" type="checkbox">
-                    <div class="track">
-                        <div class="handle"></div>
-                    </div>
-                </label>
-            </div>
+  <ion-content padding="true">
+    <div class="list">
+
+
+      <label class="item item-input item-floating-label">
+        <span class="input-label">Phase name</span>
+        <input ng-model="phase.name" type="text" placeholder="Phase name">
+      </label>
+
+
+      <label class="item item-input item-floating-label">
+        <span class="input-label">Time in seconds</span>
+        <input ng-model="phase.time" type="number" placeholder="Time in seconds">
+      </label>
+
+
+      <label class="item item-input item-select">
+        <div class="input-label">
+          Alarm sound
         </div>
-        <div class="button-bar">
-            <button class="button button-stable button-outline"
-                    on-touch="back()">Cancel</button>
-            <button on-touch="save()" class="button button-positive">
-                Save
-            </button>
-        </div>
-    </ion-content>
+        <select ng-model="phase.alarmSound">
+          <option value="bing1">Bing 1</option>
+          <option value="bing2">Bing 2</option>
+          <option value="horn">Horn</option>
+        </select>
+      </label>
+
+
+      <div class="item item-toggle">
+        One shot alarm
+        <label class="toggle toggle-positive">
+          <input ng-model="phase.selfStoppingSound" type="checkbox">
+          <div class="track">
+            <div class="handle"></div>
+          </div>
+        </label>
+      </div>
+    </div>
+
+  </ion-content>
+  <div class="bar-footer bar bar-balanced">
+    <div class="title" on-touch="save()">Save</div>
+  </div>
 </ion-view>
