--- a/www/templates/phase.html
+++ b/www/templates/phase.html
@@ -5,7 +5,7 @@
 
       <label class="item item-input item-floating-label">
         <span class="input-label">Phase name</span>
-        <input ng-model="phase.name" type="text" placeholder="Phase name">
+        <input ng-model="phase.name" type="text" placeholder="Phase name" autofocus="true">
       </label>
 
 
