add note about image sources in Info
fix #7

--- a/www/templates/info.html
+++ b/www/templates/info.html
@@ -7,6 +7,9 @@
       This open source timer is provided by <a href="http://mayflower.de">Mayflower GmbH</a>
       munich. Feel free to contribute!
     </p>
+    <p>
+      Images taken from <a href="https://unsplash.com">https://unsplash.com</a>.
+    </p>
   </ion-content>
 </ion-view>
 
