Change the word "timer set" to "timer"

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -23,7 +23,7 @@
         </ion-item>
         -->
         <ion-item menu-close="" ui-sref="app.timerSets">
-          Timer Sets
+          Timers
         </ion-item>
         <ion-item menu-close="" ui-sref="app.info">
           About OMTimer
