--- a/www/templates/timer-set.html
+++ b/www/templates/timer-set.html
@@ -8,7 +8,7 @@
   <ion-content padding="true">
     <div class="item item-divider">Timer settings</div>
     <label class="item item-input item-stacked-label">
-      <span class="input-label">Timer Set Name</span>
+      <span class="input-label">Timer Name</span>
       <input type="text" placeholder="e.g. Mediation, Pomodoro, ..." ng-model="timerSet.name"/>
     </label>
     <ion-list show-reorder="reorderEnabled">
@@ -40,6 +40,6 @@
   </ion-content>
 
   <div class="bar-footer bar bar-balanced">
-    <div class="title" on-tap="saveTimerSet()">Save timer set</div>
+    <div class="title" on-tap="saveTimerSet()">Save timer</div>
   </div>
 </ion-view>
