--- a/www/templates/timer-sets.html
+++ b/www/templates/timer-sets.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Timer Sets">
+<ion-view view-title="Timer">
   <ion-nav-buttons side="secondary">
     <button class="button" on-tap="addTimerSet()">
       <i class="ion-ios-plus-outline"></i>
